2002-05-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.4

2002-04-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.3

2002-03-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.2

2002-03-10  Jody Goldberg <jody@gnome.org>

	* Release 1.1.1

2002-02-18  Jody Goldberg <jody@gnome.org>

	* Release 1.1.0

2002-01-21  Jody Goldberg <jody@gnome.org>

	* Release 1.0.3

2002-01-15  Jody Goldberg <jody@gnome.org>

	* Release 1.0.2

2002-01-06  Jody Goldberg <jody@gnome.org>

	* Release 1.0.1

2001-12-30  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* signedness fixes/workarounds
	* boot.c (xb_setdouble) : make s gchar* rather than guint8*.
	* xbase.c (record_new) : cast g_strnfill result to guint8*.
	* xbase.c, xbase.h (record_get_field) : return gchar* rather than 
	  guint8.
	* xbase.h (XBfield) : made name gchar[] rather than guint8[].

2001-12-31  Jody Goldberg <jody@gnome.org>

	* Release 1.0.0

2001-12-25  Jody Goldberg <jody@gnome.org>

	* Release 0.99.1

2001-12-24  Jody Goldberg <jody@gnome.org>

	* boot.c (xbase_field_as_value) : be more picky about parsing dates.
	  The spec states that they must be in this format.

2001-12-15  Jody Goldberg <jody@gnome.org>

	* Release 0.99.0

2001-11-05  Jody Goldberg <jgoldberg@home,com>

	* Release 0.75

2001-11-01  Jody Goldberg <jgoldberg@home.com>

	* xbase.c (record_get_field) : fix bone headed indexing scheme.
	(xbase_close) : release the fmt.
	(xbase_field_new) : renamed to make sense and supply a style for dates.

	* boot.c (xbase_field_as_value) : now that record_get_field is less
	  bizzare use a sane indexing scheme here to.  Support dates.
	  Use the field length so that strings don't magicly enclude the
	  entire record.
	(xbase_file_open) : use a nice sane indexing scheme here too.

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* Release 0.74

2001-10-29  Jody Goldberg <jgoldberg@home.com>

	* Release 0.73

2001-10-18  Jody Goldberg <jgoldberg@home.com>

	* Release 0.72
